--- a/README.org
+++ b/README.org
@@ -5,3 +5,9 @@ A python package built on top of numpy and xarray to deal with MOM6 output.
 <a href='https://codecov.io/gh/suyashbire1/pymom6'><img src='https://codecov.io/gh/suyashbire1/pymom6/branch/master/graph/badge.svg' alt='Coverage' /></a>
 <a href='http://pymom6.readthedocs.io/en/latest/?badge=latest'><img src='https://readthedocs.org/projects/pymom6/badge/?version=latest' alt='Documentation Status' /></a>
 #+end_html
+
+See the [[http://pymom6.readthedocs.io/en/latest/][docs]] for API documentation.
+
+TODO: 
+1. Add an example case.
+2. Explain boundary conditions.
