Makes independent file for examples

--- a/docs/example_notebook.ipynb
+++ b/docs/example_notebook.ipynb
@@ -169,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Moving from one grid location to another (this will be further clarified in the plotting section):"
+    "### Moving from one grid location to another"
    ]
   },
   {
@@ -183,6 +183,13 @@
     "    vatq = ds.v.final_loc('ql').xep().sel(x=slice(-10,-5),y=slice(35,37)).read().move_to('q').compute()\n",
     "    uath = ds.u.final_loc('hl').xsm().sel(x=slice(-10,-5),y=slice(35,37)).read().move_to('h').compute()\n",
     "    vath = ds.v.final_loc('hl').ysm().sel(x=slice(-10,-5),y=slice(35,37)).read().move_to('h').compute()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This will be further clarified in the plotting section."
    ]
   },
   {
