--- a/README.org
+++ b/README.org
@@ -6,8 +6,8 @@ A python package built on top of numpy and xarray to deal with MOM6 output.
 <a href='http://pymom6.readthedocs.io/en/latest/?badge=latest'><img src='https://readthedocs.org/projects/pymom6/badge/?version=latest' alt='Documentation Status' /></a>
 #+end_html
 
-See the [https://pymom6.readthedocs.io/en/latest/][docs]] for API documentation.
-See the [https://pymom6.readthedocs.io/en/latest/example_notebook/][examples]] for how to use this package.
+See the [[https://pymom6.readthedocs.io/en/latest/][docs]] for API documentation.
+See the [[https://pymom6.readthedocs.io/en/latest/example_notebook/][examples]] for how to use this package.
 
 
 Install:
